--- a/InventoryUI/inventory-ui/src/app/dashboard/dashboard.component.html
+++ b/InventoryUI/inventory-ui/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
             <i class="bi bi-people"></i>
           </div>
           <h2 class="card-title mb-3">{{dashboardStats.billCount}}</h2>
-          <p class="card-text text-muted">Total Bills</p>
+          <p class="card-text text-muted">Customer</p>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
             <i class="bi bi-graph-up"></i>
           </div>
           <h2 class="card-title mb-3">{{dashboardStats.revenue}}</h2>
-          <p class="card-text text-muted">Revenue</p>
+          <p class="card-text text-muted">Net Sales</p>
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
             <i class="bi bi-star"></i>
           </div>
           <h2 class="card-title mb-3">{{dashboardStats.expenses}}</h2>
-          <p class="card-text text-muted">expenses</p>
+          <p class="card-text text-muted">Expense</p>
         </div>
       </div>
     </div>
