--- a/InventoryUI/inventory-ui/src/app/app.component.scss
+++ b/InventoryUI/inventory-ui/src/app/app.component.scss
@@ -22,3 +22,34 @@ a {
     border-radius: 10px;
 
 }
+
+@media only screen and (max-width: 765px) {
+    .c-nav-link{
+        margin-right: 0px;
+    }
+    
+}
+@media only screen and (max-width: 765px) {
+    .text-end{
+        display: none;
+    }
+    .app-name-header{
+        display: none !important;
+    }
+    .app-body{
+        margin-top: 5px;
+        padding: 0px 10px 0px 10px
+    }
+    
+}
+@media only screen and (min-width: 765px) {
+    .app-body{
+        margin-top: 5px;
+        padding: 0px 30px 0px 30px
+    }
+}
+.header-logo-image{
+    width: 50px;
+    height: 50px;
+}
+  
