--- a/InventoryUI/inventory-ui/src/app/billing/billing.component.html
+++ b/InventoryUI/inventory-ui/src/app/billing/billing.component.html
@@ -1,6 +1,6 @@
 
 <div class="row" style="min-height: 100vh;">
-    <div class="col-md-2 shadow" style="margin-top: 5px;background-color: #f8f9fa;text-align: center;">
+    <div class="col-md-2 large-tab shadow" style="margin-top: 5px;background-color: #f8f9fa;text-align: center;">
         
           <ul class="nav nav-pills row">
             @for(tab of tabs; track tab.name; let index = $index){
@@ -22,10 +22,10 @@
           </li>
           </ul>
 </div>
-<div class="col-md-10">
-<!-- <ul class="nav nav-tabs" style="margin-top: 15px;">
+<div class="col-12 col-md-9 order-1 order-md-1">
+<ul class="nav nav-tabs mobile-tabs" style="margin-top: 15px;">
 @for (tab of tabs; track tab.name; let index = $index) {
-    <li class="nav-item tab-item">
+    <!-- <li class="nav-item tab-item">
         <div class="nav-link  {{index==selectedTab?'active':''}}" aria-current="page">
         <div class="row">
             <div class="col-md-9" (click)="setSelectedTab(index)" style="width: 75%;">
@@ -34,6 +34,11 @@
             <div class="col-md-3" style="float: right;">  
             </div>
         </div>
+        </div>
+    </li> -->
+    <li class="nav-item tab-item-add" title="exsistingbill">
+        <div class="nav-link {{index==selectedTab?'active':''}}" aria-current="page"  aria-current="page" (click)="setSelectedTab(index)">
+            <mat-icon>receipt</mat-icon>
         </div>
     </li>
     }
@@ -47,7 +52,7 @@
             <mat-icon>search</mat-icon>
         </div>
     </li>
-</ul>    -->
+</ul>    
 <div class="container" style="margin-top:5px ;">
     <div class="row">
         <div class="col-md-12">
@@ -75,13 +80,13 @@
     </div>
 
 
-    <div class="row">
+    <div class="row" style="margin-top: 15px;">
         <div class="col-md-12">
             <div>
                 <input placeholder="Customer name" class ="col-md-9" [(ngModel)]="tabs[selectedTab].bill.name" matInput id="Name" width="100" (focusout)="setTabName()" />
                 <label for="Date" style="margin-left: 20px;">Date: {{tabs[selectedTab].bill.billDate?.toLocaleString()}}</label>
             </div>
-            <div>
+            <div style="margin-top: 10px;">
                 <input placeholder="Customer mobile" id="Mobile" [(ngModel)]="tabs[selectedTab].bill.mobile" class ="col-md-9"  />
             </div>
         </div>
@@ -89,16 +94,16 @@
 
 
     </div>
-    <div class="row" style="margin-top: 5px;">
+    <div class="row" style="margin-top: 15px;">
        
-        <table class="table">
+        <table class="">
             <thead>
                 <tr>
-                <td class="" scope="col" [width]="100">Action
+                <td class="" scope="col" >Action
                 </td>
-                <td scope="col"[width]="400">Item</td>
-                <td scope="col" [width]="150">Qty</td>
-                <td scope="col" [width]="150">Price</td>
+                <td scope="col">Item</td>
+                <td scope="col" >Qty</td>
+                <td scope="col" >Price</td>
                 </tr>
             </thead>
             <tbody>
@@ -140,7 +145,8 @@
                     <td> <button (click)="addBillItem()" style="margin-left: 10px;" mat-raised-button>
                         <mat-icon >add</mat-icon> Add Item
                     </button></td>
-                    <td> Advance payment : <input placeholder="Advance payment" [(ngModel)]="tabs[selectedTab].bill.Advance"></td>
+                    <!-- <td> Advance payment : <input placeholder="Advance payment" [(ngModel)]="tabs[selectedTab].bill.Advance"></td> -->
+                    <td></td>
                     <td><b>Discount</b></td>
                     <td><input placeholder="Discount" [(ngModel)]="tabs[selectedTab].bill.discount"></td>
                 </tr>
