--- a/InventoryUI/inventory-ui/src/app/app.component.html
+++ b/InventoryUI/inventory-ui/src/app/app.component.html
@@ -4,7 +4,7 @@
       <span class="d-flex app-name-header align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
         <img class="header-logo-image" src="logo.png" >
       </span>
-      <div class="me-lg-auto app-name-header m-2"><h4>Shop</h4></div>
+      <div class="me-lg-auto app-name-header m-2"><h4><app-header></app-header></h4></div>
       <ul class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0" style="margin-right: 10px;">
        
         @for(inroute of routes; track inroute.path; let idx = $index){
@@ -20,7 +20,7 @@
           <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
         </a>
         <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-          <li><a class="dropdown-item" href="#">Sign out</a></li>
+          <li><a class="dropdown-item" href="#" (click)="logout()">Sign out</a></li>
         </ul>
       </div>
     </div>
